# athena

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  cfmt.sh  circle.yml
cmake/: Config.cmake.in  ProjectWabt.cmake  wabt-1_0_13.patch
cmake/Hunter/: init.cmake
eos-vm/include/eosio/vm/: allocator.hpp  backend.hpp  base_visitor.hpp  bitcode_writer.hpp  config.hpp  constants.hpp  debug_visitor.hpp  disassembly_visitor.hpp  error_codes.hpp  error_codes_def.hpp  error_codes_pp.hpp  exceptions.hpp  execution_context.hpp  guarded_ptr.hpp  host_function.hpp  interpret_visitor.hpp  leb128.hpp  memory_dump.hpp  opcodes.hpp  opcodes_def.hpp  parser.hpp  sections.hpp  signals.hpp  stack_elem.hpp  types.hpp  utils.hpp  validation.hpp  variant.hpp  vector.hpp  wasm_stack.hpp  watchdog.hpp  x86_64.hpp
include/athena/: athena.h
scripts/: evm2wasm-tests.sh  tests.sh
src/: CMakeLists.txt  athena.cpp  debugging.h  eei.cpp  eei.h  eosvm.cpp  eosvm.h  exceptions.h  helpers.cpp  helpers.h  shell-interface.h  wabt.cpp  wabt.h  wavm.cpp  wavm.h
test/: CMakeLists.txt
test/fuzzing/: fuzzer.cpp
